# unconstrained

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  test.cue  unconstrained.cue
.devcontainer/: .p10k.zsh  .zshrc  Dockerfile  devcontainer.json
.github/workflows/: test.yaml
book/: _config.yml  intro-to-minizinc.ipynb  references.bib
cue.mod/: module.cue
examples/n_queens/: README.md  __init__.py  n_queens.py
examples/nurse_rostering/: README.md  __init__.py  model.py  nurse_rostering.ipynb  nurse_rostering.py  plot.py  solve.py  solve_minizinc_dynamic.py
examples/project_planning/: README.md  __init__.py  model.py  plot.py  project_planning.py  test.py  (+3 more)
models/: __init__.py  nqueens.py  rostering.py
requirements/: base.in  base.txt  dev.in  dev.txt  prod.in  prod.txt  requirements-dev.in  requirements-dev.txt  requirements-prod.in  requirements-prod.txt  requirements-test.in  requirements-test.txt  sync.sh  test.in  test.txt
scripts/: build-book  build-book.sh  compile-requirements  compile-requirements.sh  save.sh  watch-book  watch-book.sh  watch-dagger  watch-dagger.sh  watch-tests  watch-tests.sh  watch_dagger  watch_dagger.sh
src/: __init__.py  database.py  sql_model.py
tests/: conftest.py  test_map.py  test_mentorship.py  test_minizinc.py  test_model.py  test_nqueens.py  test_nurse_rostering.py  test_prelude.py  test_project_planning.py  test_queens.py  test_rostering.py  test_seq.py  test_sqlmodel.py
unconstrained/: __init__.py  prelude.py
(+65 files in other folders)
